--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   socket_io_client: ^1.0.2
   flutter_webrtc: ^0.8.5
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
